--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -26,12 +26,12 @@
             margin: 20px auto;
             width: 79%;
             max-width: 800px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            /* box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); */
             /*the button visibility*/
             position: relative;
             /* background-color: #000000c5; */
-            column-gap: 5%;
-            row-gap: 5%;
+            column-gap: 2%;
+            row-gap: 15%;
 
         }
 
@@ -50,7 +50,8 @@
             font-size: 30px;
             text-align: center;
             /* color: #f2f2f200; */
-           
+            /* width: 100%; */
+
         }
 
 
@@ -85,7 +86,8 @@
         }
 
         .menu-button {
-            background-color: #00000000;
+            /* background-color: #00000000; */
+            background-color: #00000044;
             border-radius: 8px;
             padding: 12px;
             position: relative;
@@ -102,7 +104,7 @@
         }
 
         .menu-button:hover {
-            background-color: rgba(100, 100, 150, 0.9);
+            background-color: #424242;
         }
 
         .menu-line {
@@ -430,9 +432,9 @@
 
             <tr>
                 <td style="background-color: #00000000;margin: auto;min-width: 280px;">
-                    <div class="container-6" style="max-width: 500px;background-color: #00000040;">
+                    <div class="container-6" style="max-width: 500px;background-color: #00000000;" align="center">
                         <div class="menu-button" id="menuButton3" align="center"
-                            style="color: rgba(240, 248, 255, 0.85);">
+                            style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;padding:10px;background-color: #00000000;">
                                 Career
@@ -440,21 +442,21 @@
                             </p>
                         </div>
                         <div class="menu-button" id="menuButton2" align="center"
-                            style="color: rgba(240, 248, 255, 0.85);">
+                            style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;padding:10px">Open
                                 Source Learning
                             </p>
                         </div>
-                        <div class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-        margin-right: auto;">
+                        <div class="menu-button" id="menuButton1" align="center"
+                            style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(255, 255, 255, 0.649);margin:auto;padding:10px">
                                 Softwares</b>
                             </p>
                         </div>
                         <div class=" menu-button" id="menuButton4" align="center"
-                            style="color: rgba(240, 248, 255, 0.85);">
+                            style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
                             <p class="cell-link" align="center"
                                 style="color: rgba(253, 253, 253, 0.649);margin:auto;padding:10px">UITS
                                 Archive<br></p>
