--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -337,7 +337,7 @@
     <!-- ----------------------------------------------------------------------- -->
 
 
-    <div class="container-5" align=center>
+    <div class="container-5" align=center style="max-width: 500px;">
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Programming Resources
@@ -391,7 +391,7 @@
 
 
     <!-- IFRAME BEFORE POPUP MENU -->
-    <table align=center class="resources-table-5">
+    <table align=center class="resources-table-5" style="max-width: 700px;">
         <tr>
             <th>
                 <div class="topnav-3">
@@ -406,10 +406,10 @@
 
                 <!-- "top-bar2" -->
 
-                <div class="container">
+                <div class="container" >
 
                     <div class="img-container" style="height: 300px;margin: auto;">
-                        <img src="../images/cf-streams.webp" alt="Codeforces Streams Page">
+                        <img src="../images/cf-streams.webp" alt="Codeforces Streams Page" >
                         <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                     </div>
                 </div>
