--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -340,8 +340,11 @@
     <div class="container-5" align=center style="max-width: 500px;">
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
-                <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Programming Resources
-                </p>
+                <!-- <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Programming Resources
+                </p> -->
+                <!-- <p class="highlights" align="center""> -->
+                    <a href="https://www.geeksforgeeks.org/bitsstdc-h-c/" target="_blank"  style="color: rgba(240, 248, 255, 0.649);">#include &ltbit/stdc++.h&gt</a>
+                <!-- </p> -->
             </tr>
 
             <!-- First container with menu button -->
@@ -508,7 +511,7 @@
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
-                <div class="category-title">#include &ltbit/stdc++.h&gt</div>
+                <!-- <div class="category-title">#include &ltbit/stdc++.h&gt</div> -->
                 <div class="link-item" style="background-color: #ffffff;">
                     <!-- <p style="background-color: #ffffff;"> -->
                     <a href="https://judge.beecrowd.com/en" target="_blank" style="color: #000000ab;"><img
