--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -520,7 +520,7 @@
     <!-- -------------------------------------------------------------- -->
 
     <!-- 1st popup menu -->
-    <div class=" popup-menu" id="popupMenu1" style="max-width:70%;">
+    <div class=" popup-menu" id="popupMenu1" style="max-width:400px;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -559,7 +559,7 @@
     </div>
 
     <!-- 2nd popup menu -->
-    <div class="popup-menu" id="popupMenu2" style="max-width:70%;">
+    <div class="popup-menu" id="popupMenu2" style="max-width:400px;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
         <div class="popup-menu-categories">
@@ -602,7 +602,7 @@
     </div>
 
     <!-- 3rd popup menu with different content -->
-    <div class="popup-menu" id="popupMenu3" style="max-width:70%;">
+    <div class="popup-menu" id="popupMenu3" style="max-width:400px;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
@@ -642,7 +642,7 @@
     </div>
 
     <!-- 4th popup menu with different content -->
-    <div class="popup-menu" id="popupMenu4" style="max-width:70%;">
+    <div class="popup-menu" id="popupMenu4" style="max-width:400px;">
         <div class="popup-close popup-close-btn"></div>
         <div class="popup-menu-title">Backup 27.02.25<br><small>(Not Shared)</small></div>
         <div class="popup-menu-categories">
