--- a/page-depth-01/Tutorials.html
+++ b/page-depth-01/Tutorials.html
@@ -337,8 +337,8 @@
 
     </div>
     <!-- ----------------------------------------------------------------------- -->
-    <div class="container-5" align=center>
-        <table class="resources-table-5" align=center style="width:90%;">
+    <div class="container-5" align=center style="max-width:500px;">
+        <table class="resources-table-5" align=center>
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">other tutorials
                 </p>
@@ -383,7 +383,7 @@
     </div>
 
     <!-- First popup -->
-    <div class="popup-menu" id="popupMenu1" style="max-width:70%;">
+    <div class="popup-menu" id="popupMenu1" style="max-width:400px;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Resources & Tools</div> -->
         <div class="popup-menu-categories">
