--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -407,7 +407,7 @@
                         <div class="menu-button" id="menuButton2" align="center"
                             style="color: rgba(240, 248, 255, 0.85);height:70%;width:100%;">
                             <p class="cell-link" align="center"
-                                style="color: rgba(255, 255, 255, 0.649);margin:auto;=background-color: #00000000;">
+                                style="color: rgba(255, 255, 255, 0.649);margin:auto;background-color: #00000000;">
                                 Programmer's blog
                             </p>
 
@@ -415,7 +415,7 @@
                         <div class="menu-button" id="menuButton3" align="center"
                             style="color: rgba(240, 248, 255, 0.85);height:70%;width:100%;">
                             <p class="cell-link" align="center"
-                                style="color: rgba(255, 255, 255, 0.649);margin:auto;=background-color: #00000000;">
+                                style="color: rgba(255, 255, 255, 0.649);margin:auto;background-color: #00000000;">
                                 Online blog
                             </p>
 
