--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -433,10 +433,10 @@
     <!-- NOTICE POPUP -->
 
     <!-- First popup menu -->
-    <div class="popup-menu" id="popupMenu1">
+    <div class="popup-menu" id="popupMenu1"  style="max-width: 400px;">
         <div class="popup-close popup-close-btn"></div>
         <!-- <div class="popup-menu-title">Content Creators</div> -->
-        <div class="popup-menu-categories">
+        <div class="popup-menu-categories" >
             <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">People I Follow</div> -->
                 <div class="link-item">
