--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -474,16 +474,22 @@
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
                 <!-- <div class="category-title">People I Follow</div> -->
+                <div>
+                    <p style="color: #f1f1f1;"><i>Faculties' work</i></p>
+                </div>
                 <div class="link-item">
                     <a href="https://mrinmoyakash.blogspot.com/" target="_blank">
                         Mrinmoy Biswas Akash @blogspot
                     </a>
                 </div>
-                <!--                 <div class="link-item">
-                    <a href="#" target="_blank">
-                        #
+                <div>
+                    <p style="color: #f1f1f1;"><i>Students' works</i></p>
+                </div>
+                <div class="link-item">
+                    <a href="https://uitscse.hashnode.dev/" target="_blank">
+                        xnocode / NO CODE @hashnode
                     </a>
-                </div> -->
+                </div>
 
                 <!-- More links here -->
             </div>
