--- a/page-depth-01/Blog.html
+++ b/page-depth-01/Blog.html
@@ -483,7 +483,7 @@
                     </a>
                 </div>
                 <div>
-                    <p style="color: #f1f1f1;"><i>Students' works</i></p>
+                    <p style="color: #f1f1f1;"><i>Students' work</i></p>
                 </div>
                 <div class="link-item">
                     <a href="https://uitscse.hashnode.dev/" target="_blank">
