--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -209,10 +209,18 @@
             transition: color 0.3s ease;
         }
 
-        .popup-menu-category .link-item:link,
+        /* .popup-menu-category .link-item:link,
         .popup-menu-category .link-item:visited,
         .popup-menu-category .link-item:active,
         .popup-menu-category .link-item:focus {
+            color: #ffffffba;
+            outline: none;
+        } */
+
+        .link-item:link,
+        .link-item:visited,
+        .link-item:active,
+        .link-item:focus {
             color: #ffffffba;
             /* Keep the same color for all states */
             outline: none;
