added transparent link click effect everywhere

--- a/page-depth-01/page-depth-02/OSSU.html
+++ b/page-depth-01/page-depth-02/OSSU.html
@@ -105,21 +105,21 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://ossu.firebaseapp.com/#/" target="_blank">
+                    <a class="cell-link" href="https://ossu.firebaseapp.com/#/" target="_blank">
                         OSSU Website
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://github.com/ossu" target="_blank">
+                    <a class="cell-link"  href="https://github.com/ossu" target="_blank">
                         OSSU GitHub ⭐
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://discord.gg/Geg29VA4rJ" target="_blank">
+                    <a class="cell-link"  href="https://discord.gg/Geg29VA4rJ" target="_blank">
                         OSSU Discord ⭐
                     </a>
                 </td>
