--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -59,6 +59,12 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
             z-index: 50;
             transition: background-color 0.3s ease;
+
+            /* DISABLES LINK CLICK EFFECT */
+            -webkit-tap-highlight-color: transparent;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            user-select: none;
         }
 
         .menu-button:hover {
