--- a/page-depth-01/General-Info.html
+++ b/page-depth-01/General-Info.html
@@ -66,7 +66,8 @@
             z-index: 50;
             transition: background-color 0.3s ease;
 
-            -webkit-tap-highlight-color: transparent;
+             /* DISABLES LINK CLICK EFFECT */
+             -webkit-tap-highlight-color: transparent;
             -webkit-touch-callout: none;
             -webkit-user-select: none;
             user-select: none;
