--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -487,36 +487,6 @@
                 </td>
             </tr> -->
 
-            <!-- 1st container with different menu button -->
-            <!-- <tr>
-                <td class="menu-button" id="menuButton2" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-                margin-right: auto;">
-
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Open
-                        Source Learning
-                    </p>
-                </td>
-            </tr> -->
-            <!-- 3rd container with menu button -->
-
-            <!-- <tr>
-                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-                margin-right: auto;">
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Softwares
-                    </p>
-                </td>
-            </tr> -->
-            <!-- 4th container with menu button -->
-
-            <!-- <tr>
-                <td class=" menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-                margin-right: auto;">
-
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">UITS
-                        Archive</p>
-                </td>
-            </tr> -->
-
         </table>
     </div>
 
@@ -650,7 +620,7 @@
     <!-- 4th popup menu with different content -->
     <div class="popup-menu" id="popupMenu4" style="max-width:400px;">
         <div class="popup-close popup-close-btn"></div>
-        <div class="popup-menu-title">Backup 27.02.25<br><small>(Not Shared)</small></div>
+        <div class="popup-menu-title">Backup 18.03.25<br><small style="color: #ffffff4f;">(Not Shared)</small></div>
         <div class="popup-menu-categories">
             <div class="popup-menu-category" align="center">
                 <!--                 <div class="category-title">Coding Resources</div> -->
