--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <td>
           <!-- <p> -->
           <a href="page-depth-01/General-Info.html" class="cell-link">
-            General Information
+            General Information<br><small><i style="font-size: xx-small;">(Notice,Questions,Outlines,...)</i></small>
             <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             </a>
             <!-- </p> -->
