--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -15,6 +15,47 @@
             color: #fff;
         } */
 
+        /* CONTAINER FOR GRID  */
+        .container-6 {
+            display: grid;
+            grid-template-columns: auto auto;
+            /* background-color: dodgerblue; */
+            /* padding: 10px; */
+            border-radius: 15px;
+            padding: 25px;
+            margin: 20px auto;
+            width: 79%;
+            max-width: 800px;
+            /* box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); */
+            /*the button visibility*/
+            position: relative;
+            /* background-color: #000000c5; */
+            column-gap: 2%;
+            row-gap: 15%;
+
+        }
+
+        /* .container-6>div {
+            background-color: #f1f1f1;
+            border: 1px solid black;
+            padding: 10px;
+            font-size: 30px;
+            text-align: center;
+        }  */
+
+        .container-5>div>div {
+            background-color: #f1f1f1;
+            border: 1px solid black;
+            padding: 10px;
+            font-size: 30px;
+            text-align: center;
+            /* color: #f2f2f200; */
+            /* width: 100%; */
+
+        }
+
+
+
         .container-5 {
 
             border-radius: 15px;
@@ -342,62 +383,39 @@
     </div>
     <!-- ----------------------------------------------------------------------- -->
 
+<br>
+    <p align="center"><a href="https://www.geeksforgeeks.org/bitsstdc-h-c/" target="_blank"
+    style="color: rgba(0, 0, 0, 0.649);"><i>#include &ltbit/stdc++.h&gt</i></a></p>
 
-    <div class="container-5" align=center style="max-width: 500px;">
-        <table class="resources-table-5" align=center style="width:90%;">
-            <tr>
-                <!-- <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Programming Resources
-                </p> -->
-                <!-- <p class="highlights" align="center""> -->
-                    <a href="https://www.geeksforgeeks.org/bitsstdc-h-c/" target="_blank"  style="color: rgba(240, 248, 255, 0.649);">#include &ltbit/stdc++.h&gt</a>
-                <!-- </p> -->
-            </tr>
 
-            <!-- First container with menu button -->
-            <tr>
-                <td class="menu-button" id="menuButton1" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-    margin-right: auto;">
-
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
-                        Learning Websites
-                    </p>
-                </td>
-            </tr>
-
-            <tr>
-                <!-- Second container with different menu button -->
-                <td class="menu-button" id="menuButton2" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-    margin-right: auto;">
-
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">
-                        Programming Videos
-                    </p>
-                </td>
-            </tr>
-            <tr>
-                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-    margin-right: auto;">
-
-                    <p class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;">Online
-                        Judges
-                    </p>
-                </td>
-            </tr>
-            <tr>
-                <td class="menu-button" id="menuButton4" align="center" style="color: rgba(240, 248, 255, 0.85);margin-left: auto;
-    margin-right: auto;">
-                    <!-- <p  class="cell-link" align="center" style="color: rgba(240, 248, 255, 0.649);padding: 5%;"> -->
-                    <a class="cell-link" style="color: rgba(240, 248, 255, 0.649);padding:10%;"
-                        href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
-                        target="_blank">
-                        UITS Contests Archive
-                    </a>
-                    <!-- </p> -->
-                </td>
-            </tr>
-        </table>
+    <div class="container-6" style="max-width: 500px;background-color: #00000000;margin-bottom: 50px;">
+        <div class="menu-button" id="menuButton1" align="center"
+            style="background-color: rgb(49, 54, 58);height:70%;width:70%;">
+            <p class="cell-link" align="center"
+                style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                Learning Websites
+            </p>
+        </div>
+        <div class="menu-button" id="menuButton2" align="center"
+        style="background-color: rgb(49, 54, 58);height:70%;width:70%;">
+            <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">Open
+                Programming Videos
+            </p>
+        </div>
+        <div class="menu-button" id="menuButton4" align="center"
+        style="background-color: rgb(49, 54, 58);height:70%;width:70%;">
+            <p class="cell-link" align="center" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;">
+                Online Judges</b>
+            </p>
+        </div>
+        <div class=" menu-button" align="center" style="background-color: rgb(49, 54, 58);height:70%;width:70%;">
+            <a class="cell-link" style="color: rgb(255, 255, 255);margin:auto;padding:10px;background-color: #00000000;"
+                href="https://drive.google.com/drive/folders/1n8wBkN1nAhpW3Z0eMkU9OlMNaPByp88F?usp=drive_link"
+                target="_blank">
+                UITS Contests Archive
+            </a>
+        </div>
     </div>
-
 
     <!-- IFRAME BEFORE POPUP MENU -->
     <table align=center class="resources-table-5" style="max-width: 700px;">
@@ -415,10 +433,10 @@
 
                 <!-- "top-bar2" -->
 
-                <div class="container" >
+                <div class="container">
 
                     <div class="img-container" style="height: 300px;margin: auto;">
-                        <img src="../images/cf-streams.webp" alt="Codeforces Streams Page" >
+                        <img src="../images/cf-streams.webp" alt="Codeforces Streams Page">
                         <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
                     </div>
                 </div>
