--- a/page-depth-01/CP-aux.html
+++ b/page-depth-01/CP-aux.html
@@ -18,6 +18,7 @@
         /* CONTAINER FOR GRID  */
         .container-6 {
             display: grid;
+            place-items: center;
             grid-template-columns: auto auto;
             /* background-color: dodgerblue; */
             /* padding: 10px; */
