--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -102,8 +102,8 @@
             z-index: 50;
             transition: background-color 0.3s ease;
 
-             /* DISABLES LINK CLICK EFFECT */
-             -webkit-tap-highlight-color: transparent;
+            /* DISABLES LINK CLICK EFFECT */
+            -webkit-tap-highlight-color: transparent;
             -webkit-touch-callout: none;
             -webkit-user-select: none;
             user-select: none;
@@ -393,7 +393,7 @@
             </tr>
             <tr>
                 <td style="margin-left: auto;
-    margin-right: auto;">
+    margin-right: auto;width:250px;height:60px;padding: 2%;">
                     <!-- <p> -->
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1tKdvGoeoYQJ6ms-p7ZPlA2EvYPJ4SWFt"
                         target="_blank">
@@ -401,10 +401,9 @@
                     </a>
                     <!-- </p> -->
                 </td>
-            </tr>
-            <tr>
+
                 <td style="margin-left: auto;
-    margin-right: auto;">
+    margin-right: auto;width:250px;height:60px;padding: 2%;">
                     <!-- <p> -->
                     <a class="cell-link" href="https://drive.google.com/drive/folders/1RyEfnky5cr22HnjMu5qnm3q8loP2jIqa"
                         target="_blank">
@@ -415,15 +414,18 @@
             </tr>
             <tr>
                 <td style="margin-left: auto;
-    margin-right: auto;">
+    margin-right: auto;width:250px;height:60px;padding: 2%;">
                     <!-- <p> -->
                     <a class="cell-link" href="page-depth-02\Resources-Dump.html">
                         Saraf's Resources List
                     </a>
                     <!-- </p> -->
                 </td>
+                <td style="background-color: #00000000;">
+
+                </td>
             </tr>
-            <td style="background-color: rgba(240, 248, 255, 0);margin: auto;">
+            <td colspan="2" style="background-color: rgba(240, 248, 255, 0);margin: auto;">
 
                 <!-- <p  style="color: rgba(240, 248, 255, 0.649);justify-content: center;"> -->
                 <br>
@@ -437,7 +439,7 @@
             <!-- ------------------------------------------------------------------------ -->
 
             <tr>
-                <td style="background-color: #00000000;margin: auto;min-width: 280px;">
+                <td style="background-color: #00000000;margin: auto;min-width: 280px;" colspan="2">
                     <div class="container-6" style="max-width: 500px;background-color: #00000000;" align="center">
                         <div class="menu-button" id="menuButton3" align="center"
                             style="color: rgba(240, 248, 255, 0.85);height:70%;width:70%;">
